--- a/package.json
+++ b/package.json
@@ -42,7 +42,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
-    "@types/react": "~18.2.14"
+    "@types/eslint": "^8",
+    "@types/react": "~18.2.14",
+    "@typescript-eslint/parser": "^5.0.1",
+    "eslint": "^8.52.0",
+    "prettier": "^3.1.0",
+    "prettier-eslint": "^16.1.2"
   },
   "private": true,
   "packageManager": "yarn@4.0.2"
