--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "expo-router-example",
-    "slug": "expo-router-example",
+    "name": "WeatherApp",
+    "slug": "weather-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -22,7 +22,12 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
+      "package": "com.lcsb.weatherapp"
     },
     "web": {
       "bundler": "metro",
@@ -32,14 +37,23 @@
     "plugins": [
       "expo-router",
       "expo-font",
-      ["expo-location",
-      {
-        "locationAlwaysAndWhenInUseInPermission": "Autoriser WeatherApp à utiliser votre localisation"
-      }
-    ]
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUseInPermission": "Autoriser WeatherApp à utiliser votre localisation"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "7cc5f0f8-ff08-43ce-ab5c-3ae5cf628b7e"
+      }
     }
   }
 }
