--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-expo": "^10.0.1",
     "expo": "~50.0.17",
     "expo-font": "~11.10.3",
+    "expo-linear-gradient": "^12.7.2",
     "expo-linking": "~6.2.1",
     "expo-location": "^16.5.5",
     "expo-router": "~3.4.10",
