fix on en parle plus

--- a/eas.json
+++ b/eas.json
@@ -5,7 +5,7 @@
         "buildType": "apk"
       },
       "env": {
-        "WEATHER_API_KEY": "@WEATHER_API_KEY"
+        "EXPO_PUBLIC_WEATHER_API_KEY": "your-api-key"
       }
     },
     "preview2": {
